--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 exceptiongroup==1.3.0
@@ -5,17 +6,22 @@ execnet==2.1.1
 Faker==37.3.0
 idna==3.10
 iniconfig==2.1.0
+isort==6.0.1
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 packaging==25.0
 pluggy==1.6.0
+pydantic==2.11.5
+pydantic_core==2.33.2
 pytest==8.3.5
 pytest-html==4.1.1
 pytest-metadata==3.1.1
+pytest-rerunfailures==15.1
 pytest-xdist==3.6.1
 python-dotenv==1.1.0
 requests==2.32.3
 tomli==2.2.1
+typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
