--- a/.isort.cfg
+++ b/.isort.cfg
@@ -11,3 +11,4 @@ skip = .venv, venv, __pycache__
 atomic = true
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = cinescope
+force_sort_within_sections = true  # Сортировка внутри каждого блока
